# Assistant-GUI

./: .gitignore  README.md  get_id.py  main.py  pyproject.toml  report.md
src/assistant/: crew.py  main.py
src/assistant/config/: agents.yaml  tasks.yaml
src/assistant/tools/: chart_generation_tool.py  internet_search_tool.py
src/gui/: app.py  report.md
src/gui/db/: chroma.sqlite3
src/gui/output/: market_research_report.md
src/tests/: test_generate_chart_image_upload.py
