[tool.poetry]
name = "assistant"
version = "0.1.0"
description = "assistant using crewAI"
readme = "README.md"
authors = ["Raivis Petrovskis <info@iammobilefriendly.dev>"]

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
streamlit = "^1.38.0"
duckduckgo-search = "^7.2.0"
crewai = {extras = ["tools"], version = "^0.95.0"}

[tool.poetry.scripts]
assistant = "assistant.main:run"
run_crew = "assistant.main:run"
train = "assistant.main:train"
replay = "assistant.main:replay"
test = "assistant.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
